fixed winner block, winner ovals and minor misalignment on the counters

--- a/src/components/Game/GameBoard/index.css
+++ b/src/components/Game/GameBoard/index.css
@@ -362,10 +362,17 @@
 	}
 
 	.col-6{
-		left: 5px;
+		left: 6px;
 	}
 
 	.col-7{
 		left: 4px;
 	}
+
+    .oval {
+        width: 20px;
+        height: 20px;
+        left: 6px;
+        top: 6px;
+    }
 }
